--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,8 +44,8 @@ about:
   license_family: None
   summary: Easy VCS-based management of project version strings
   description: |
-    A lightweight library for converting complex
-    datatypes to and from native Python datatypes.
+    This is a tool for managing a recorded version number
+    in setuptools-based python projects.
   dev_url: https://marshmallow.readthedocs.io/
   doc_url: https://marshmallow.readthedocs.io/en/stable/
 
