--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ test:
     - pip
   commands:
     - pip check
-    - {{ SP_DIR }}/versioneer version
+    - versioneer version
 
 about:
   home: https://github.com/python-versioneer/python-versioneer
