--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,13 @@
 {% set name = "versioneer" %}
 {% set version = "0.29" %}
-{% set sha256 = "5ab283b9857211d61b53318b7c792cf68e798e765ee17c27ade9f6c924235731" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 5ab283b9857211d61b53318b7c792cf68e798e765ee17c27ade9f6c924235731
 
 build:
   skip: true  # [py<37]
